--- a/index.html
+++ b/index.html
@@ -21,16 +21,42 @@
           cabo buenas ideas. ¿Hablamos?
         </p>
         <div class="presentacion__enlaces">
+          <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes</h2>
           <a class="presentacion__enlaces__link" href="https://instagram.com/"
-            >Instagram</a
+            ><img src="assets/instagram.png" class="img1" alt="" /><img
+              src="assets/instagram2.png"
+              class="img2"
+              alt=""
+            />
+            Instagram</a
           >
           <a class="presentacion__enlaces__link" href="https://github.com/"
-            >GitHub</a
+            ><img src="assets/linkedin.png" class="img1" alt="" /><img
+              src="assets/linkedin2.png"
+              class="img2"
+              alt=""
+            />
+            Linkedin</a
+          >
+          <a class="presentacion__enlaces__link" href="https://github.com/"
+            ><img src="assets/github.png" class="img1" alt="" /><img
+              src="assets/github2.png"
+              class="img2"
+              alt=""
+            />
+            GitHub</a
           >
         </div>
       </section>
-      <img src="Imagem.png" alt="Foto de Ana García desarrolando un proyecto" />
+      <div class="img_borde">
+        <img
+          src="assets/Imagen.jpeg"
+          alt="Foto de Ana García desarrolando un proyecto"
+        />
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h3>Desarrollado por LenerCodeLab</h3>
+    </footer>
   </body>
 </html>
