--- a/index.html
+++ b/index.html
@@ -5,47 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="header_nav">
+        <a href="#" class="header_menu_link">Home</a>
+        <a href="pages/about.html" class="header_menu_link">Sobre mí</a>
+      </nav>
+    </header>
     <main class="presentacion">
       <section class="presentacion__contenido">
         <h1 class="presentacion__contenido__titulo">
-          Eleve tu negocio digital a otro nivel
-          <strong class="titulo-destaque">con un Front-end de calidad! </strong>
+          🚀 Potencia tu equipo con
+          <strong class="titulo-destaque"
+            >soluciones tecnológicas eficientes
+          </strong>
         </h1>
         <p class="presentacion__contenido__texto">
-          ¡Hola! Soy Ana García, desarrolladora Front-end con especialización en
-          React, HTML y CSS. Ayudo a pequeños negocios y diseñadores a llevar a
-          cabo buenas ideas. ¿Hablamos?
+          ¡Hola! Soy Lener Huamán Perales, Ingeniero de Sistemas egresado con
+          experiencia en desarrollo web (HTML, CSS, JavaScript) y conocimientos
+          en frameworks como Tailwind CSS, Bootstrap y manejo básico de Angular.
+          Además, poseo habilidades en análisis de datos con SQL Server, Excel y
+          Power BI, así como en programación con C# y Python, lo que me permite
+          adaptarme a diversos entornos tecnológicos y aportar soluciones
+          eficientes.
         </p>
         <div class="presentacion__enlaces">
           <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes</h2>
-          <a class="presentacion__enlaces__link" href="https://instagram.com/"
-            ><img src="assets/instagram.png" class="img1" alt="" /><img
-              src="assets/instagram2.png"
-              class="img2"
-              alt=""
-            />
-            Instagram</a
-          >
-          <a class="presentacion__enlaces__link" href="https://github.com/"
-            ><img src="assets/linkedin.png" class="img1" alt="" /><img
-              src="assets/linkedin2.png"
-              class="img2"
-              alt=""
-            />
-            Linkedin</a
-          >
-          <a class="presentacion__enlaces__link" href="https://github.com/"
-            ><img src="assets/github.png" class="img1" alt="" /><img
-              src="assets/github2.png"
-              class="img2"
-              alt=""
-            />
-            GitHub</a
-          >
+          <div class="presentacion_enlaces_botones">
+            <a class="presentacion__enlaces__link" href="https://instagram.com/"
+              ><img src="assets/instagram.png" class="img1" alt="" /><img
+                src="assets/instagram2.png"
+                class="img2"
+                alt=""
+              />
+              Instagram</a
+            >
+            <a
+              class="presentacion__enlaces__link"
+              href="https://www.linkedin.com/in/lenerhuamanperales/"
+              ><img src="assets/linkedin.png" class="img1" alt="" /><img
+                src="assets/linkedin2.png"
+                class="img2"
+                alt=""
+              />
+              Linkedin</a
+            >
+            <a
+              class="presentacion__enlaces__link"
+              href="https://github.com/LenerCodeLab"
+              ><img src="assets/github.png" class="img1" alt="" /><img
+                src="assets/github2.png"
+                class="img2"
+                alt=""
+              />
+              GitHub</a
+            >
+          </div>
         </div>
       </section>
       <div class="img_borde">
