--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <nav class="header_nav">
         <a href="#" class="header_menu_link">Home</a>
         <a href="pages/about.html" class="header_menu_link">Sobre mí</a>
+        <a href="pages/Curriculum.html" class="header_menu_link">Curriculum</a>
       </nav>
     </header>
     <main class="presentacion">
@@ -73,7 +74,15 @@
       </div>
     </main>
     <footer>
-      <h3>Desarrollado por LenerCodeLab</h3>
+      <p>
+        ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
+      </p>
+      <p>
+        Desarrollado por
+        <a href="https://github.com/LenerCodeLab" target="_blank"
+          >LenerCodeLab</a
+        >
+      </p>
     </footer>
   </body>
 </html>
