--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,7 @@
       <nav class="header_nav">
         <a href="../index.html" class="header_menu_link">Home</a>
         <a href="#" class="header_menu_link">Sobre mí</a>
+        <a href="Curriculum.html" class="header_menu_link">Curriculum</a>
       </nav>
     </header>
     <main class="presentacion">
@@ -54,6 +55,16 @@
         </div>
       </div>
     </main>
-    <footer><h3>Desarrollado por LenerCodeLab</h3></footer>
+    <footer>
+      <p>
+        ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
+      </p>
+      <p>
+        Desarrollado por
+        <a href="https://github.com/LenerCodeLab" target="_blank"
+          >LenerCodeLab</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
