--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
           </div>
         </div>
       </section>
-      <div class="img_borde">
-        <img
-          src="assets/Imagen.jpeg"
-          alt="Foto de Ana García desarrolando un proyecto"
-        />
+      <div class="img_completa">
+        <div class="img_borde">
+          <img src="assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
+        </div>
       </div>
     </main>
     <footer>
