--- a/pages/about.html
+++ b/pages/about.html
@@ -48,10 +48,7 @@
       </section>
       <div class="img_completa">
         <div class="img_borde">
-          <img
-            src="../assets/Imagen.jpeg"
-            alt="Foto de Ana García desarrolando un proyecto"
-          />
+          <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
         </div>
       </div>
     </main>
