--- a/pages/Curriculum.html
+++ b/pages/Curriculum.html
@@ -40,16 +40,12 @@
           </li>
         </ul>
 
-        <h2 class="presentacion__contenido__titulo">Estudios</h2>
+        <h2 class="presentacion__contenido__titulo">Certificaciones</h2>
         <ul class="presentacion__contenido__texto">
           <li>
             Ingeniería de Sistemas - Universidad Nacional San Luis Gonzaga (2020
             - Actualidad)
           </li>
-          <br />
-          <li>Gestión de base de datos con SQL - Zegel Virtual (Julio 2024)</li>
-          <br />
-          <li>Excel Básico - Netzun</li>
           <br />
           <li>Especialización en HTML - Netzun</li>
           <br />
@@ -58,14 +54,18 @@
           <li>Inglés - ICPNA / Beca PRONABEC (2016)</li>
           <br />
           <li>Tablas dinámicas empresariales - CAMCOP</li>
+          <br />
+          <li>
+            Gestión de base de datos con SQL - Zegel Virtual (<a
+              href="https://cdn.inlearning.edu.pe/ZegelVirtual/Certificado/HUAMAN-17_08_25-7036950-AT3X.pdf/"
+              >ver certificado</a
+            >)
+          </li>
         </ul>
       </section>
       <div class="img_completa">
         <div class="img_borde">
-          <img
-            src="../assets/Imagen.jpeg"
-            alt="Foto de Ana García desarrolando un proyecto"
-          />
+          <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
         </div>
         <a
           href="https://drive.google.com/file/d/1-meWBETxUgbyaCvpcImD6tUaxlQo4wCh/view?usp=drive_link"
@@ -73,6 +73,99 @@
           class="img_boton"
           >Curriculum Documentado</a
         >
+        <section class="habilidades">
+          <h2 class="presentacion__contenido__titulo">Habilidades Técnicas</h2>
+          <div class="habilidades__grid">
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                alt="HTML5"
+                title="HTML5"
+              />
+              HTML5
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+                alt="CSS3"
+                title="CSS3"
+              />
+              CSS3
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                alt="JavaScript"
+                title="JavaScript"
+              />
+              JavaScript
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
+                alt="Bootstrap"
+                title="Bootstrap"
+              />
+              Bootstrap
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg"
+                alt="Angular"
+                title="Angular"
+              />
+              Angular
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
+                alt="Git"
+                title="Git"
+              />
+              Git
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                alt="Python"
+                title="Python"
+              />
+              Python
+            </div>
+            <div>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"
+                alt="C#"
+                title="C#"
+              />
+              C#
+            </div>
+            <div>
+              <img
+                src="https://img.icons8.com/color/48/000000/microsoft-excel-2019.png"
+                alt="Excel"
+                title="Excel"
+              />
+              Excel
+            </div>
+            <div>
+              <img
+                src="https://img.icons8.com/color/48/000000/power-bi.png"
+                alt="Power BI"
+                title="Power BI"
+              />
+              Power BI
+            </div>
+            <div>
+              <img
+                src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"
+                alt="SQL Server"
+                title="SQL Server"
+              />
+              SQL Server
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
