--- a/index.html
+++ b/index.html
@@ -1,87 +1,68 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="header_nav">
-        <a href="#" class="header_menu_link">Home</a>
-        <a href="pages/about.html" class="header_menu_link">Sobre mí</a>
-        <a href="pages/Curriculum.html" class="header_menu_link">Curriculum</a>
-      </nav>
-    </header>
-    <main class="presentacion">
-      <section class="presentacion__contenido">
-        <h1 class="presentacion__contenido__titulo">
-          🚀 Potencia tu equipo con
-          <strong class="titulo-destaque"
-            >soluciones tecnológicas eficientes
-          </strong>
-        </h1>
-        <p class="presentacion__contenido__texto">
-          ¡Hola! Soy Lener Huamán Perales, Ingeniero de Sistemas egresado con
-          experiencia en desarrollo web (HTML, CSS, JavaScript) y conocimientos
-          en frameworks como Tailwind CSS, Bootstrap y manejo básico de Angular.
-          Además, poseo habilidades en análisis de datos con SQL Server, Excel y
-          Power BI, así como en programación con C# y Python, lo que me permite
-          adaptarme a diversos entornos tecnológicos y aportar soluciones
-          eficientes.
-        </p>
-        <div class="presentacion__enlaces">
-          <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes</h2>
-          <div class="presentacion_enlaces_botones">
-            <a class="presentacion__enlaces__link" href="https://instagram.com/"
-              ><img src="assets/instagram.png" class="img1" alt="" /><img
-                src="assets/instagram2.png"
-                class="img2"
-                alt=""
-              />
-              Instagram</a
-            >
-            <a
-              class="presentacion__enlaces__link"
-              href="https://www.linkedin.com/in/lenerhuamanperales/"
-              ><img src="assets/linkedin.png" class="img1" alt="" /><img
-                src="assets/linkedin2.png"
-                class="img2"
-                alt=""
-              />
-              Linkedin</a
-            >
-            <a
-              class="presentacion__enlaces__link"
-              href="https://github.com/LenerCodeLab"
-              ><img src="assets/github.png" class="img1" alt="" /><img
-                src="assets/github2.png"
-                class="img2"
-                alt=""
-              />
-              GitHub</a
-            >
-          </div>
-        </div>
-      </section>
-      <div class="img_completa">
-        <div class="img_borde">
-          <img src="assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portafolio</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+
+<body>
+  <header>
+    <nav class="header_nav">
+      <a href="#" class="header_menu_link">Home</a>
+      <a href="pages/about.html" class="header_menu_link">Sobre mí</a>
+      <a href="pages/Curriculum.html" class="header_menu_link">Curriculum</a>
+    </nav>
+  </header>
+  <main class="presentacion">
+    <section class="presentacion__contenido">
+      <h1 class="presentacion__contenido__titulo">
+        🚀 Potencia tu equipo con
+        <strong class="titulo-destaque">soluciones tecnológicas eficientes
+        </strong>
+      </h1>
+      <p class="presentacion__contenido__texto">
+        ¡Hola! Soy Lener Huamán Perales, Ingeniero de Sistemas egresado con
+        experiencia en desarrollo web (HTML, CSS, JavaScript) y conocimientos
+        en frameworks como Tailwind CSS, Bootstrap y manejo básico de Angular.
+        Además, poseo habilidades en análisis de datos con SQL Server, Excel y
+        Power BI, así como en programación con C# y Python, lo que me permite
+        adaptarme a diversos entornos tecnológicos y aportar soluciones
+        eficientes.
+      </p>
+      <div class="presentacion__enlaces">
+        <h2 class="presentacion_enlaces_subtitulo">Accede a mis redes</h2>
+        <div class="presentacion_enlaces_botones">
+          <a class="presentacion__enlaces__link" href="https://instagram.com/"><img src="assets/instagram.png"
+              class="img1" alt="" /><img src="assets/instagram2.png" class="img2" alt="" />
+            Instagram</a>
+          <a class="presentacion__enlaces__link" href="https://www.linkedin.com/in/lenerhuamanperales/"><img
+              src="assets/linkedin.png" class="img1" alt="" /><img src="assets/linkedin2.png" class="img2" alt="" />
+            Linkedin</a>
+          <a class="presentacion__enlaces__link" href="https://github.com/LenerCodeLab"><img src="assets/github.png"
+              class="img1" alt="" /><img src="assets/github2.png" class="img2" alt="" />
+            GitHub</a>
         </div>
       </div>
-    </main>
-    <footer>
-      <p>
-        ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
-      </p>
-      <p>
-        Desarrollado por
-        <a href="https://github.com/LenerCodeLab" target="_blank"
-          >LenerCodeLab</a
-        >
-      </p>
-    </footer>
-  </body>
+    </section>
+    <div class="img_completa">
+      <div class="img_borde">
+        <img src="assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>
+      ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
+    </p>
+    <p>
+      Desarrollado por
+      <a href="https://github.com/LenerCodeLab" target="_blank">LenerCodeLab</a>
+    </p>
+  </footer>
+</body>
+
 </html>
