--- a/pages/about.html
+++ b/pages/about.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre mí</title>
-    <link rel="stylesheet" href="../style/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="header_nav">
-        <a href="../index.html" class="header_menu_link">Home</a>
-        <a href="#" class="header_menu_link">Sobre mí</a>
-        <a href="Curriculum.html" class="header_menu_link">Curriculum</a>
-      </nav>
-    </header>
-    <main class="presentacion">
-      <section class="presentacion__contenido">
-        <h1 class="presentacion__contenido__titulo">🧑‍💻 Sobre mí</h1>
-        <p class="presentacion__contenido__texto">
-          Mi nombre es Lener Augusto Nil Huamán Perales y soy Ingeniero de
-          Sistemas egresado, con sólida formación académica y orientación al
-          desarrollo web y análisis de datos.
-        </p>
-        <p class="presentacion__contenido__texto">
-          Cuento con conocimientos en tecnologías esenciales como HTML5, CSS3 y
-          JavaScript, aplicando buenas prácticas de diseño responsivo, semántico
-          y accesible. Tengo experiencia en el uso de frameworks como Tailwind
-          CSS y Bootstrap, así como conocimientos básicos en Angular para el
-          desarrollo de aplicaciones web dinámicas.
-        </p>
-        <p class="presentacion__contenido__texto">
-          En el ámbito del análisis de datos, manejo herramientas como SQL
-          Server, Microsoft Excel y Power BI, lo que me permite extraer,
-          transformar y visualizar datos para apoyar la toma de decisiones
-          estratégicas.
-        </p>
-        <p class="presentacion__contenido__texto">
-          Además, poseo habilidades en programación con los lenguajes C# y
-          Python, lo que me brinda versatilidad para adaptarme a diversos
-          entornos y retos tecnológicos.
-        </p>
-        <p class="presentacion__contenido__texto_resaltado">
-          🎯 Mi objetivo es formar parte de una empresa donde pueda aplicar y
-          seguir fortaleciendo mis habilidades técnicas, contribuir a proyectos
-          de impacto y crecer profesionalmente como desarrollador y analista.
-        </p>
-      </section>
-      <div class="img_completa">
-        <div class="img_borde">
-          <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sobre mí</title>
+  <link rel="stylesheet" href="../style/style.css" />
+</head>
+
+<body>
+  <header>
+    <nav class="header_nav">
+      <a href="../index.html" class="header_menu_link">Home</a>
+      <a href="#" class="header_menu_link">Sobre mí</a>
+      <a href="Curriculum.html" class="header_menu_link">Curriculum</a>
+    </nav>
+  </header>
+  <main class="presentacion">
+    <section class="presentacion__contenido">
+      <h1 class="presentacion__contenido__titulo">🧑‍💻 Sobre mí</h1>
+      <p class="presentacion__contenido__texto">
+        Mi nombre es Lener Augusto Nil Huamán Perales y soy Ingeniero de
+        Sistemas egresado, con sólida formación académica y orientación al
+        desarrollo web y análisis de datos.
+      </p>
+      <p class="presentacion__contenido__texto">
+        Cuento con conocimientos en tecnologías esenciales como HTML5, CSS3 y
+        JavaScript, aplicando buenas prácticas de diseño responsivo, semántico
+        y accesible. Tengo experiencia en el uso de frameworks como Tailwind
+        CSS y Bootstrap, así como conocimientos básicos en Angular para el
+        desarrollo de aplicaciones web dinámicas.
+      </p>
+      <p class="presentacion__contenido__texto">
+        En el ámbito del análisis de datos, manejo herramientas como SQL
+        Server, Microsoft Excel y Power BI, lo que me permite extraer,
+        transformar y visualizar datos para apoyar la toma de decisiones
+        estratégicas.
+      </p>
+      <p class="presentacion__contenido__texto">
+        Además, poseo habilidades en programación con los lenguajes C# y
+        Python, lo que me brinda versatilidad para adaptarme a diversos
+        entornos y retos tecnológicos.
+      </p>
+      <p class="presentacion__contenido__texto_resaltado">
+        🎯 Mi objetivo es formar parte de una empresa donde pueda aplicar y
+        seguir fortaleciendo mis habilidades técnicas, contribuir a proyectos
+        de impacto y crecer profesionalmente como desarrollador y analista.
+      </p>
+    </section>
+    <div class="img_completa">
+      <div class="img_borde">
+        <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
       </div>
-    </main>
-    <footer>
-      <p>
-        ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
-      </p>
-      <p>
-        Desarrollado por
-        <a href="https://github.com/LenerCodeLab" target="_blank"
-          >LenerCodeLab</a
-        >
-      </p>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer>
+    <p>
+      ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
+    </p>
+    <p>
+      Desarrollado por
+      <a href="https://github.com/LenerCodeLab" target="_blank">LenerCodeLab</a>
+    </p>
+  </footer>
+</body>
+
 </html>
