--- a/pages/Curriculum.html
+++ b/pages/Curriculum.html
@@ -1,183 +1,141 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Curriculum</title>
-    <link rel="stylesheet" href="../style/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="header_nav">
-        <a href="../index.html" class="header_menu_link">Home</a>
-        <a href="about.html" class="header_menu_link">Sobre mí</a>
-        <a href="#" class="header_menu_link">Curriculum</a>
-      </nav>
-    </header>
-    <main class="presentacion">
-      <section class="presentacion__contenido">
-        <h1 class="presentacion__contenido__titulo">Curriculum</h1>
-        <p class="presentacion__contenido__texto">
-          Soy egresado de Ingeniería de Sistemas, autodidacta y apasionado por
-          la tecnología. Me especializo en el análisis de datos con herramientas
-          como Excel y Power BI, y en desarrollo Front-End con HTML, CSS y
-          JavaScript. Busco integrarme a un equipo donde pueda seguir creciendo
-          y aportar soluciones digitales eficientes.
-        </p>
 
-        <h2 class="presentacion__contenido__titulo">Experiencias</h2>
-        <ul class="presentacion__contenido__texto">
-          <li>
-            <strong
-              >Municipalidad Distrital de Santiago (Mar 2024 - Jul 2024)</strong
-            >
-            - Asistente en Manejo de Información
-          </li>
-          <br />
-          <li>
-            <strong>Nómada Travel (Jul 2024 - Ago 2024)</strong> - Diseñador y
-            desarrollador Front-End
-          </li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Curriculum</title>
+  <link rel="stylesheet" href="../style/style.css" />
+</head>
 
-        <h2 class="presentacion__contenido__titulo">Certificaciones</h2>
-        <ul class="presentacion__contenido__texto">
-          <li>
-            Ingeniería de Sistemas - Universidad Nacional San Luis Gonzaga (2020
-            - Actualidad)
-          </li>
-          <br />
-          <li>Especialización en HTML - Netzun</li>
-          <br />
-          <li>Ofimática Profesional - Educa Corp Perú</li>
-          <br />
-          <li>Inglés - ICPNA / Beca PRONABEC (2016)</li>
-          <br />
-          <li>Tablas dinámicas empresariales - CAMCOP</li>
-          <br />
-          <li>
-            Gestión de base de datos con SQL - Zegel Virtual (<a
-              href="https://cdn.inlearning.edu.pe/ZegelVirtual/Certificado/HUAMAN-17_08_25-7036950-AT3X.pdf/"
-              >ver certificado</a
-            >)
-          </li>
-        </ul>
-      </section>
-      <div class="img_completa">
-        <div class="img_borde">
-          <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
-        </div>
-        <a
-          href="https://drive.google.com/file/d/1-meWBETxUgbyaCvpcImD6tUaxlQo4wCh/view?usp=drive_link"
-          target="_blank"
-          class="img_boton"
-          >Curriculum Documentado</a
-        >
-        <section class="habilidades">
-          <h2 class="presentacion__contenido__titulo">Habilidades Técnicas</h2>
-          <div class="habilidades__grid">
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
-                alt="HTML5"
-                title="HTML5"
-              />
-              HTML5
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
-                alt="CSS3"
-                title="CSS3"
-              />
-              CSS3
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-                alt="JavaScript"
-                title="JavaScript"
-              />
-              JavaScript
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
-                alt="Bootstrap"
-                title="Bootstrap"
-              />
-              Bootstrap
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg"
-                alt="Angular"
-                title="Angular"
-              />
-              Angular
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
-                alt="Git"
-                title="Git"
-              />
-              Git
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
-                alt="Python"
-                title="Python"
-              />
-              Python
-            </div>
-            <div>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"
-                alt="C#"
-                title="C#"
-              />
-              C#
-            </div>
-            <div>
-              <img
-                src="https://img.icons8.com/color/48/000000/microsoft-excel-2019.png"
-                alt="Excel"
-                title="Excel"
-              />
-              Excel
-            </div>
-            <div>
-              <img
-                src="https://img.icons8.com/color/48/000000/power-bi.png"
-                alt="Power BI"
-                title="Power BI"
-              />
-              Power BI
-            </div>
-            <div>
-              <img
-                src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"
-                alt="SQL Server"
-                title="SQL Server"
-              />
-              SQL Server
-            </div>
-          </div>
-        </section>
+<body>
+  <header>
+    <nav class="header_nav">
+      <a href="../index.html" class="header_menu_link">Home</a>
+      <a href="about.html" class="header_menu_link">Sobre mí</a>
+      <a href="#" class="header_menu_link">Curriculum</a>
+    </nav>
+  </header>
+  <main class="presentacion">
+    <section class="presentacion__contenido">
+      <h1 class="presentacion__contenido__titulo">Curriculum</h1>
+      <p class="presentacion__contenido__texto">
+        Soy egresado de Ingeniería de Sistemas, autodidacta y apasionado por
+        la tecnología. Me especializo en el análisis de datos con herramientas
+        como Excel y Power BI, y en desarrollo Front-End con HTML, CSS y
+        JavaScript. Busco integrarme a un equipo donde pueda seguir creciendo
+        y aportar soluciones digitales eficientes.
+      </p>
+
+      <h2 class="presentacion__contenido__titulo">Experiencias</h2>
+      <ul class="presentacion__contenido__texto">
+        <li>
+          <strong>Municipalidad Distrital de Santiago (Mar 2024 - Jul 2024)</strong>
+          - Asistente en Manejo de Información
+        </li>
+        <br />
+        <li>
+          <strong>Nómada Travel (Jul 2024 - Ago 2024)</strong> - Diseñador y
+          desarrollador Front-End
+        </li>
+      </ul>
+
+      <h2 class="presentacion__contenido__titulo">Certificaciones</h2>
+      <ul class="presentacion__contenido__texto">
+        <li>
+          Ingeniería de Sistemas - Universidad Nacional San Luis Gonzaga (2020
+          - Actualidad)
+        </li>
+        <br />
+        <li>Especialización en HTML - Netzun</li>
+        <br />
+        <li>Ofimática Profesional - Educa Corp Perú</li>
+        <br />
+        <li>Inglés - ICPNA / Beca PRONABEC (2016)</li>
+        <br />
+        <li>Tablas dinámicas empresariales - CAMCOP</li>
+        <br />
+        <li>
+          Gestión de base de datos con SQL - Zegel Virtual (<a
+            href="https://cdn.inlearning.edu.pe/ZegelVirtual/Certificado/HUAMAN-17_08_25-7036950-AT3X.pdf/">ver
+            certificado</a>)
+        </li>
+      </ul>
+    </section>
+    <div class="img_completa">
+      <div class="img_borde">
+        <img src="../assets/Imagen.jpeg" alt="Foto de LenerCodeLab" />
       </div>
-    </main>
-    <footer>
-      <p>
-        ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
-      </p>
-      <p>
-        Desarrollado por
-        <a href="https://github.com/LenerCodeLab" target="_blank"
-          >LenerCodeLab</a
-        >
-      </p>
-    </footer>
-  </body>
+      <a href="https://drive.google.com/file/d/1-meWBETxUgbyaCvpcImD6tUaxlQo4wCh/view?usp=drive_link" target="_blank"
+        class="img_boton">Curriculum Documentado</a>
+      <section class="habilidades">
+        <h2 class="presentacion__contenido__titulo">Habilidades Técnicas</h2>
+        <div class="habilidades__grid">
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5"
+              title="HTML5" />
+            HTML5
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3"
+              title="CSS3" />
+            CSS3
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+              alt="JavaScript" title="JavaScript" />
+            JavaScript
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
+              alt="Bootstrap" title="Bootstrap" />
+            Bootstrap
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" alt="Angular"
+              title="Angular" />
+            Angular
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git" />
+            Git
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"
+              title="Python" />
+            Python
+          </div>
+          <div>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#"
+              title="C#" />
+            C#
+          </div>
+          <div>
+            <img src="https://img.icons8.com/color/48/000000/microsoft-excel-2019.png" alt="Excel" title="Excel" />
+            Excel
+          </div>
+          <div>
+            <img src="https://img.icons8.com/color/48/000000/power-bi.png" alt="Power BI" title="Power BI" />
+            Power BI
+          </div>
+          <div>
+            <img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png" alt="SQL Server"
+              title="SQL Server" />
+            SQL Server
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer>
+    <p>
+      ©2025 Lener Augusto Nil Huamán Perales. Todos los derechos reservados.
+    </p>
+    <p>
+      Desarrollado por
+      <a href="https://github.com/LenerCodeLab" target="_blank">LenerCodeLab</a>
+    </p>
+  </footer>
+</body>
+
 </html>
